tests/error_display/test_hll_defer_ref_obligation_unfulfilled.err.expected
error: at 5:19: [INIT-RefObligationUnfulfilled] In function 'f': reference 'r' has unfulfilled obligation here (is_init=true, ends_init=false)
   |
 5 |             defer r.* = Box { val: 5 };
   |                   ^^^^^^^^^^^^^^^^^^^^
